--- a/future/index.html
+++ b/future/index.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <head>
 
 <title>Join live cast Barely Legal as we bring The Rocky Horror Picture Show to the San Francisco Bay Area</title>
